Fixed style on mobile screen resolution

--- a/assets/themes/bootstrap/css/style.css
+++ b/assets/themes/bootstrap/css/style.css
@@ -1,7 +1,44 @@
 /* general overrides */
+@media(min-width: 768px) {
+  .navbar {
+    height: 101px;
+  }
+
+  .collapse {
+    display: block;
+  }
+
+  .container {
+    position: relative;
+  }
+
+  .navbar-collapse {
+    height: auto !important;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+
+  .navbar .nav {
+    float: right;
+  }
+}
+
+@media(max-width: 768px) {
+  .navbar .nav {
+    padding-left: 10px;
+  }
+
+  button.navbar-toggle {
+    position: absolute;
+    top: 0;
+    right: 0;
+    outline: 0;
+  }
+}
+
 .navbar {
   margin-bottom: 0;
-  height: 101px;
   border: none;
   border-bottom: 1px solid #e7e7e7;
 }
@@ -20,9 +57,6 @@
   height: 100px;
   padding: 0;
   margin-left: -180px!important;
-}
-.collapse{
-  display: block;
 }
 .navbar-brand-2 {
   background: url(/assets/images/faria-devtips-2.png);
@@ -74,8 +108,6 @@ footer {
 .container-narrow > hr {
   margin: 30px 0; }
 
-.navbar .nav {
-  float: right; }
 
 /* post-full*/
 .post-full {
